# ayet_chamard_projet_siam

./: .gitignore
script_test_automatique/: etat_courant.txt  temp_sortie.txt
script_test_automatique/trace/: trace_test_integration_01.txt  trace_test_integration_02.txt  trace_test_ko_03.txt  trace_test_ko_06.txt  trace_test_ko_07.txt  trace_test_ok_01.txt  trace_test_ok_02.txt  trace_test_ok_03.txt  trace_test_ok_04.txt  trace_test_ok_05.txt  trace_test_ok_06.txt  trace_test_ok_07.txt  trace_test_ok_08.txt
src/: Makefile  api_siam.c  api_siam.h  compilation.sh  coordonnees_plateau.c  coordonnees_plateau.h  entree_sortie.c  jeu_siam.c  jeu_siam.h  joueur.c  joueur.h  main.c  mode_interactif.c  mode_interactif.h  noms.txt~  orientation_deplacement.c  orientation_deplacement.h  orientation_deplacement.h~  parseur_mode_interactif.c  piece_siam.c  piece_siam.h  plateau_modification.c  plateau_modification.h  plateau_siam.c  plateau_siam.h  pousse.c  pousse.h  type_piece.c  type_piece.h
test/test_integration/: test_integration_02.txt  test_integration_02_sortie.txt  test_integration_03.txt  test_integration_03.txt~  test_integration_03_sortie.txt~
test/test_unitaire_ko/: test_ko_02.txt~  test_ko_03.txt  test_ko_04.txt  test_ko_05.txt  test_ko_05.txt~  test_ko_06.txt  test_ko_06.txt~  test_ko_06_entree.txt~  test_ko_07.txt  test_ko_07.txt~
test/test_unitaire_ok/: test_ok_02.txt  test_ok_03.txt  test_ok_03_sortie.txt  test_ok_04.txt  test_ok_04.txt~  test_ok_04_entree.txt  test_ok_05.txt  (+18 more)
visualiseur/: CMakeLists.txt  README  piece_caracteristiques.cpp  visualiseur.cpp
